[package]
name = "solana-validator-health"
version = "0.2.0"
edition = "2021"
authors = ["Marchel Penchev"]
description = "Open-source Rust monitoring & alerting tool for Solana validators"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "0.14", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
once_cell = "1.19"
anyhow = "1"
